Fixed the "No messages found" element not showing in the chat section when no messages are found.

--- a/client/src/scss/hangout.scss
+++ b/client/src/scss/hangout.scss
@@ -1587,7 +1587,7 @@
     will-change: scroll-position;
 
     .no-messages {
-      @apply bg-secondary dark:bg-secondary-dark text-sm md:text-base text-title dark:text-title-dark font-medium p-1 px-2 mb-2 w-fit rounded-[20rem] block absolute bottom-0 left-0 right-0 mx-auto;
+      @apply bg-secondary dark:bg-secondary-dark text-sm md:text-base text-title dark:text-title-dark font-medium p-1 px-2 mb-2 w-fit mx-auto rounded-[20rem] block;
     }
 
     .date-stamp {
